# crypto-trading-system

./: .gitignore
batch-prediction-pipeline/: data.py  pyproject.toml
feature/: .env  pyproject.toml
feature/data/: ohlc_data_last_7_days.csv
feature/data/downloads/: ADA-USD_2025-02-15.csv  ADA-USD_2025-02-16.csv  ADA-USD_2025-02-17.csv  ADA-USD_2025-02-18.csv  ADA-USD_2025-02-19.csv  ADA-USD_2025-02-20.csv  ADA-USD_2025-02-21.csv  ADA-USD_2025-02-22.csv  BTC-USD_2025-02-15.csv  BTC-USD_2025-02-16.csv  BTC-USD_2025-02-17.csv  BTC-USD_2025-02-18.csv  BTC-USD_2025-02-19.csv  BTC-USD_2025-02-20.csv  BTC-USD_2025-02-21.csv  BTC-USD_2025-02-22.csv  ETH-USD_2025-02-15.csv  ETH-USD_2025-02-16.csv  ETH-USD_2025-02-17.csv  ETH-USD_2025-02-18.csv  ETH-USD_2025-02-19.csv  ETH-USD_2025-02-20.csv  ETH-USD_2025-02-21.csv  ETH-USD_2025-02-22.csv  LTC-USD_2025-02-15.csv  LTC-USD_2025-02-16.csv  LTC-USD_2025-02-17.csv  LTC-USD_2025-02-18.csv  LTC-USD_2025-02-19.csv  LTC-USD_2025-02-20.csv  LTC-USD_2025-02-21.csv  LTC-USD_2025-02-22.csv  XRP-USD_2025-02-15.csv  XRP-USD_2025-02-16.csv  XRP-USD_2025-02-17.csv  XRP-USD_2025-02-18.csv  XRP-USD_2025-02-19.csv  XRP-USD_2025-02-20.csv  XRP-USD_2025-02-21.csv  XRP-USD_2025-02-22.csv
feature/src/: data.py  paths.py
feature/src/etl/: load.py
feature_pipeline/: README.md
feature_pipeline/src/: data.py  download_and_load_ohlc_to_feature_store.py
feature_pipeline/src/etl/: load.py
training_pipeline/: .env  data.py  models.py  pyproject.toml  train_baseline_model.py  utils.py
training_pipeline/outputs/: baseline_train_metadata.json
(+4 files in other folders)
