[project]
name = "training-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fire>=0.5.0",
    "hopsworks>=3.4.3",
    "jinja2>=3.0.1",
    "lightgbm>=3.3.5",
    "matplotlib>=3.7.1",
    "pyarrow>=11.0.0",
    "python-dotenv>=1.0.0",
    "seaborn>=0.12.2",
    "sktime>=0.16.1",
    "wandb>=0.14.0",
]
